# contract-data-extraction-system

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  contract_wiki_ingestion.py  criteria_planning.py  deterministic_extraction.py  document_parsing.py  excel_filling.py  extraction.py  generic_extraction.py  langchain_contract_agents.py  retrieval.py  structure_analysis.py  validation.py  wiki_extraction.py
backend/app/api/: schemas.py
backend/app/api/routes/: health.py  jobs.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/domain/: criteria.py  documents.py  extraction.py  jobs.py  wiki.py
backend/app/infrastructure/llm/: embeddings.py  openai_client.py  reranker.py
backend/app/infrastructure/logging/: async_logger.py
backend/app/infrastructure/parsers/: doc_converter.py  docling_parser.py  docx_parser.py  excel_template.py
backend/app/infrastructure/repositories/: file_repository.py  job_repository.py
backend/app/infrastructure/wiki/: wiki_store.py
backend/app/services/: job_service.py  pipeline.py  progress_service.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_core.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentTimeline.tsx  DownloadCard.tsx  FileUploadCard.tsx  ProgressPanel.tsx
frontend/src/styles/: index.css
