[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-data-extraction-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9", "pydantic-settings>=2.4",
  "openai>=1.40", "python-docx>=1.1", "openpyxl>=3.1", "xlrd>=2.0", "tenacity>=8.5", "aiofiles>=24.1", "langchain>=1.0.0", "langchain-openai>=1.0.0", "docling>=2.49.0"
]
[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11"]
[tool.ruff]
line-length = 100
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
